testing/macro-tests/tests/ui/index_reserved_namespace_segment.stderr
error: invalid entity name 'UiIndexedEntity|~reserved': entity name must not contain '|'
  --> tests/ui/index_reserved_namespace_segment.rs:16:12
   |
16 |     name = "UiIndexedEntity|~reserved",
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
